<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".Registrarse">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/text_boton_volver"
                android:padding="8dp"
                app:srcCompat="@drawable/icono_regresar"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="34dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registro de usuarios"
                android:textStyle="bold"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/textView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingresa los siguientes datos"
                android:textSize="12sp" />

        </LinearLayout>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_nombres"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="262dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextText99"
                style="@style/Style_input"
                android:ems="10"
                android:hint="@string/hint_introduce_tu_nombre"
                android:inputType="text"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_apellidos"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="262dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextText61"
                style="@style/Style_input"
                android:hint="@string/hint_introduce_tu_apellido"
                android:ems="10"
                android:inputType="text"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView58"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_telefono"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="262dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextText62"
                style="@style/Style_input"
                android:hint="@string/hint_introduce_tu_telefono"
                android:ems="10"
                android:inputType="phone"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_correo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="262dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextText9"
                style="@style/Style_input"
                android:hint="@string/hint_introduce_tu_correo"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>
        <!-- -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textView57"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_contrasena"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="262dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextText999"
                style="@style/Style_input"
                android:hint="@string/hint_introduce_tu_contrasena"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/button2"
                style="@style/Style_button_sin_icono"
                android:layout_height="48dp"
                android:text="@string/text_crear_cuenta"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ya_tienes_cuenta"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="679dp" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_inicia_sesion"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="679dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>